--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,31 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+#main-div {
+  /* margin: 0 auto; */
+  /* background-color: red; */
+}
+
+#inner-div {
+  width: 30%;
+
+  margin: 0 auto;
+
+  /* background-color: blue; */
+}
+
+#text-input {
+  margin-top: 30%;
+  
+  width: 100%;
+  height: 60px;
+
+  box-sizing: border-box;
+
+  font-size: 20px;
+}
+
+ul li {
+  font-size: 20px;
+}
